<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activity_root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/colorPrimary"
            android:elevation="5dp"
            app:layout_constraintBottom_toTopOf="@id/bottom_header_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_centerInParent="true"
                android:layout_marginStart="48dp"
                android:layout_alignParentStart="true"
                android:id="@+id/toolbar_back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/back_arrow_content_description"
                android:src="@drawable/ic_mdi_home" />

            <ImageView
                android:layout_centerInParent="true"
                android:layout_width="100dp"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_decole_branco" />

        </RelativeLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottom_header_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/activity_scroolable_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/container_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bottom_header_guideline">

            <!-- Form Container Layout -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <!-- Edit Profile Layout -->
                <LinearLayout
                    android:padding="16dp"
                    android:id="@+id/account_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorTextIcons"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_mdi_face"
                        tools:ignore="ContentDescription" />

                    <LinearLayout
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/edit_account_title"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/edit_account_subtitle"
                            android:textColor="@color/colorSecondaryText"
                            android:textSize="12sp" />
                    </LinearLayout>
                </LinearLayout>

                <!-- Change Password Layout -->
                <LinearLayout
                    android:padding="16dp"
                    android:layout_marginTop="4dp"
                    android:id="@+id/change_pw_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorTextIcons"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_mdi_vpn_key"
                        tools:ignore="ContentDescription" />

                    <LinearLayout
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/change_password_title"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/change_password_subtitle"
                            android:textColor="@color/colorSecondaryText"
                            android:textSize="12sp" />
                    </LinearLayout>
                </LinearLayout>

                <!-- Edit Company Layout -->
                <LinearLayout
                    android:padding="16dp"
                    android:layout_marginTop="4dp"
                    android:id="@+id/company_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorTextIcons"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_mdi_work"
                        tools:ignore="ContentDescription" />

                    <LinearLayout
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/edit_company_title"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/edit_company_subtitle"
                            android:textColor="@color/colorSecondaryText"
                            android:textSize="12sp" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <!-- Logout Layout -->
        <LinearLayout
            android:elevation="15dp"
            android:id="@+id/container_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@color/colorTextIcons"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:padding="16dp"
                android:layout_marginTop="4dp"
                android:id="@+id/logout_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorTextIcons"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_mdi_exit_to_app"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/account_logout_title"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/account_logout_subtitle"
                        android:textColor="@color/colorSecondaryText"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>