<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    tools:context=".presentation.maintenance.MaintenanceActivity">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_decole_branco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="64dp"
        app:layout_constraintBottom_toTopOf="@id/ok_button"
        app:layout_constraintTop_toBottomOf="@id/logo_image">

        <ImageView
            android:id="@+id/main_image"
            android:layout_width="194dp"
            android:layout_height="223dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_undraw_maintenance" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:text="@string/technical_problems"
            android:textColor="@color/colorSecondaryText"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/info_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/technical_problems_secondary"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp" />

    </LinearLayout>

    <Button
        android:id="@+id/ok_button"
        style="@style/btn_primary"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="40dp"
        android:text="@string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>