<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        app:layout_constraintBottom_toTopOf="@id/bottom_header_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/transparent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="5dp">

        <ImageView
            android:layout_centerInParent="true"
            android:layout_width="100dp"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_decole_verde" />

    </RelativeLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_header_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.core.widget.NestedScrollView
        app:layout_constraintTop_toBottomOf="@+id/bottom_header_guideline"
        app:layout_constraintBottom_toTopOf="@+id/container_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:paddingHorizontal="32dp"
            android:paddingVertical="32dp"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:src="@drawable/ic_notify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="ContentDescription" />

            <TextView
                android:text="@string/global_error_handler_message"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="16dp"
                android:textColor="#000000"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/background"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/container_button"
        android:paddingHorizontal="32dp"
        android:paddingVertical="24dp"
        android:gravity="center">

        <Button
            android:onClick="onClick"
            style="@style/btn_primary"
            android:text="@string/back_to_home_page"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/account_company_form"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>